# mysql-project

./: README.md  db_configmap.yaml  mysql-service.yaml  mysql_deployment.yaml  mysql_with_docker.ipynb  mysql_with_kubernetes.ipynb  phpmyadmin-service.yaml  pyproject.toml
docker-compose-files/: docker-compose.yaml  init.sql
manifest/: mysql-service.yaml
manifest-cm/: db_configmap.yaml  mysql_deployment.yaml  phpmyadmin-deployment.yaml
